--- a/slides/2025_gw_ospo/slides.css
+++ b/slides/2025_gw_ospo/slides.css
@@ -3,20 +3,29 @@ th {
   font-size: 24px;
 }
 
-.centered-text {
+.centered-orange {
   text-align: center;
   margin-top: 1em;
   color: #FF5733;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  gap: 20px;
+  height: 70vh;
+  align-items: center;
+  justify-content: center;
+}
+
 .container {
-  border: 2px solid #333; /* A solid border with a color */
-  padding: 10px;          /* Padding inside the container */
-  margin: 5px auto;      /* Margin to center the container */
-  max-width: 90%;         /* Maximum width of the container */
-  border-radius: 8px;     /* Rounded corners */
-  background-color: #f9f9f9; /* Light background color */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Slight shadow for effect */
+  border: 2px solid #333;
+  padding: 10px;
+  width: 300px;
+  margin: 0 auto;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .quarto-figure {
