--- a/slides/2025_gw_oscon/slides.css
+++ b/slides/2025_gw_oscon/slides.css
@@ -78,3 +78,7 @@ th {
   border-style: solid;
   border-color: transparent #f0f0f0 transparent transparent;
 }
+
+iframe {
+  margin-bottom: 0.5em;
+}
